# WeatherAPIClient

./: LICENSE  README.md  gitignore  pyproject.toml  setup.py
weather_api_client/: __init__.py  client.py  main.py  service.py
weather_api_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
